@@ -1,0 +1,158 @@
+[Overrides]
+af:en-US/amazondotcom.xml,en-US/google.xml
+ar:en-US/amazondotcom.xml,en-US/google.xml
+ast:en-US/google.xml
+be:en-US/google.xml
+bg:en-US/amazondotcom.xml,en-US/google.xml
+bn-BD:en-US/google.xml
+bn-IN:en-US/amazondotcom.xml,en-US/google.xml
+br:br/../fr/amazon-france.xml,en-US/google.xml
+bs:en-US/amazondotcom.xml,en-US/google.xml
+ca:en-US/google.xml
+cs:en-US/google.xml
+cy:cy/../en-GB/amazon-en-GB.xml,en-US/google.xml
+da:da/amazon-co-uk.xml,en-US/google.xml
+de:de/amazondotcom-de.xml,en-US/google.xml
+el:el/../en-GB/amazon-en-GB.xml,en-US/google.xml
+en-GB:en-GB/amazon-en-GB.xml,en-GB/google.xml
+en-US:en-US/amazondotcom.xml,en-US/google.xml
+en-ZA:en-US/amazondotcom.xml,en-ZA/google.xml
+eo:en-US/amazondotcom.xml,en-US/google.xml
+es-AR:en-US/amazondotcom.xml,en-US/google.xml
+es-CL:en-US/google.xml
+es-ES:en-US/google.xml
+es-MX:en-US/google.xml
+et:en-US/google.xml
+eu:en-US/google.xml,eu/../en-GB/amazon-en-GB.xml
+fa:en-US/amazondotcom.xml,en-US/google.xml
+fi:en-US/google.xml
+fr:en-US/google.xml,fr/amazon-france.xml
+ga-IE:en-US/google.xml,ga-IE/../en-GB/amazon-en-GB.xml
+gl:en-US/google.xml,gl/../en-GB/amazon-en-GB.xml
+gu-IN:en-US/google.xml
+he:en-US/google.xml
+hi-IN:en-US/google.xml
+hr:en-US/google.xml,hr/../en-GB/amazon-en-GB.xml
+hu:en-US/google.xml
+hy-AM:en-US/amazondotcom.xml,en-US/google.xml
+id:en-US/google.xml
+is:en-US/amazondotcom.xml,en-US/google.xml
+it:en-US/google.xml,it/amazon-it.xml
+ja:ja/amazon-jp.xml,ja/google-jp.xml
+kk:en-US/google.xml
+kn:en-US/amazondotcom.xml,en-US/google.xml
+ko:en-US/google.xml
+ku:en-US/amazondotcom.xml,ku/google-ku.xml
+lg:en-US/amazondotcom.xml,en-US/google.xml
+lt:en-US/amazondotcom.xml,en-US/google.xml
+lv:en-US/google.xml
+mai:en-US/google.xml
+mk:en-US/amazondotcom.xml,en-US/google.xml
+ml:en-US/google.xml
+mr:en-US/amazondotcom.xml,en-US/google.xml
+nb-NO:en-US/google.xml,nb-NO/../en-GB/amazon-en-GB.xml
+nl:en-US/google.xml
+nn-NO:en-US/google.xml,nn-NO/../en-GB/amazon-en-GB.xml
+nso:en-US/amazondotcom.xml,en-US/google.xml
+or:en-US/amazondotcom.xml,en-US/google.xml
+pa-IN:en-US/google.xml
+pl:en-US/google.xml
+pt-BR:en-US/google.xml
+ro:en-US/amazondotcom.xml,en-US/google.xml
+ru:en-US/google.xml
+si:en-US/amazondotcom.xml,en-US/google.xml
+sk:en-US/google.xml
+sl:en-US/google.xml
+sq:en-US/google.xml,sq/amazon-en-GB.xml
+sr:en-US/google.xml,sr/../en-GB/amazon-en-GB.xml
+sv-SE:en-US/google.xml
+ta:en-US/google.xml
+te:en-US/amazondotcom.xml,en-US/google.xml
+th:en-US/amazondotcom.xml,en-US/google.xml
+tr:en-US/amazondotcom.xml,en-US/google.xml
+uk:en-US/google.xml
+vi:en-US/google.xml
+zh-CN:en-US/google.xml,zh-CN/amazondotcn.xml,zh-CN/baidu.xml
+zh-TW:en-US/google.xml
+zu:en-US/amazondotcom.xml,en-US/google.xml
+
+[Additions]
+af:en-US/duckduckgo.xml
+ar:en-US/duckduckgo.xml
+ast:en-US/duckduckgo.xml
+be:en-US/duckduckgo.xml
+bg:en-US/duckduckgo.xml
+bn-BD:en-US/duckduckgo.xml
+bn-IN:en-US/duckduckgo.xml
+br:en-US/duckduckgo.xml
+bs:en-US/duckduckgo.xml
+ca:en-US/duckduckgo.xml
+cs:en-US/duckduckgo.xml
+cy:en-US/duckduckgo.xml
+da:en-US/duckduckgo.xml
+de:en-US/duckduckgo.xml
+el:en-US/duckduckgo.xml
+en-GB:en-US/duckduckgo.xml
+en-US:en-US/duckduckgo.xml
+en-ZA:en-US/duckduckgo.xml
+eo:en-US/duckduckgo.xml
+es-AR:en-US/duckduckgo.xml
+es-CL:en-US/duckduckgo.xml
+es-ES:en-US/duckduckgo.xml
+es-MX:en-US/duckduckgo.xml
+et:en-US/duckduckgo.xml
+eu:en-US/duckduckgo.xml
+fa:en-US/duckduckgo.xml
+fi:en-US/duckduckgo.xml
+fr:en-US/duckduckgo.xml
+fy-NL:en-US/duckduckgo.xml
+ga-IE:en-US/duckduckgo.xml
+gd:en-US/duckduckgo.xml
+gl:en-US/duckduckgo.xml
+gu-IN:en-US/duckduckgo.xml
+he:en-US/duckduckgo.xml
+hi-IN:en-US/duckduckgo.xml
+hr:en-US/duckduckgo.xml
+hu:en-US/duckduckgo.xml
+hy-AM:en-US/duckduckgo.xml
+id:en-US/duckduckgo.xml
+is:en-US/duckduckgo.xml
+it:en-US/duckduckgo.xml
+ja:en-US/duckduckgo.xml
+kk:en-US/duckduckgo.xml
+kn:en-US/duckduckgo.xml
+ko:en-US/duckduckgo.xml
+ku:en-US/duckduckgo.xml
+lg:en-US/duckduckgo.xml
+lt:en-US/duckduckgo.xml
+lv:en-US/duckduckgo.xml
+mai:en-US/duckduckgo.xml
+mk:en-US/duckduckgo.xml
+ml:en-US/duckduckgo.xml
+mr:en-US/duckduckgo.xml
+nb-NO:en-US/duckduckgo.xml
+nl:en-US/duckduckgo.xml
+nn-NO:en-US/duckduckgo.xml
+nso:en-US/duckduckgo.xml
+or:en-US/duckduckgo.xml
+pa-IN:en-US/duckduckgo.xml
+pl:en-US/duckduckgo.xml
+pt-BR:en-US/duckduckgo.xml
+pt-PT:en-US/duckduckgo.xml
+ro:en-US/duckduckgo.xml
+ru:en-US/duckduckgo.xml
+si:en-US/duckduckgo.xml
+sk:en-US/duckduckgo.xml
+sl:en-US/duckduckgo.xml
+sq:en-US/duckduckgo.xml
+sr:en-US/duckduckgo.xml
+sv-SE:en-US/duckduckgo.xml
+ta:en-US/duckduckgo.xml
+te:en-US/duckduckgo.xml
+th:en-US/duckduckgo.xml
+tr:en-US/duckduckgo.xml
+uk:en-US/duckduckgo.xml
+vi:en-US/duckduckgo.xml
+zh-CN:en-US/duckduckgo.xml
+zh-TW:en-US/duckduckgo.xml
+zu:en-US/duckduckgo.xml
